--- a/frontend/app.html
+++ b/frontend/app.html
@@ -1,23 +1,54 @@
 <!doctype html>
 <html ng-app="playlistach">
-    <head>
-        <meta charset="utf-8" />
-        <title>Playlistach</title>
-        <link rel="stylesheet" href="styles.css" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-        <script src="app.js"></script>
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <title>Playlistach</title>
+    <!-- Styles -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Libraries -->
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+    <!-- Templates -->
+    <script type="text/ng-template" id="playlist.html">
+        <div ng-repeat="entry in tracks.pages[page]">
+            <span ng-switch="entry.data.origin">
+                <i ng-switch-when="VK" class="fa fa-vk"></i>
+                <i ng-switch-when="SC" class="fa fa-soundcloud"></i>
+            </span>
+            {{entry.data.title}}
+            <i class="fa fa-pause"
+               ng-show="entry.data.streamUrl == player.current"
+               ng-click="player.pause(entry.data.streamUrl)">
+            </i>
+            <i class="fa fa-play"
+               ng-show="entry.data.streamUrl != player.current"
+               ng-click="player.play(entry.data.streamUrl)">
+            </i>
+            <span ng-switch="mode">
+                <i ng-switch-when="source"
+                   ng-click="move(entry)"
+                   class="fa fa-plus">
+                </i>
+                <i ng-switch-when="target"
+                   ng-click="move(entry)"
+                   class="fa fa-minus">
+                </i>
+            </span>
+        </div>
+    </script>
+    <!-- Scripts -->
+    <script src="app.js"></script>
+</head>
 <body ng-controller="MainCtrl">
     <header>
         <h2>Playlistach</h2>
     </header>
     <nav>
-        <input type="text"
+        <input ng-model="searchQuery"
+               type="text"
                size="34"
-               placeholder="Burial - Near Dark"
-               ng-model="searchQuery">
+               placeholder="Burial - Near Dark">
         <button ng-click="search(searchQuery)">
             Search
         </button>
@@ -26,26 +57,23 @@
         <header>
             Search results:
         </header>
-        <div ng-repeat="track in results[currentPage]">
-            <span ng-switch="track.origin">
-                <i ng-switch-when="VK" class="fa fa-vk"></i>
-                <i ng-switch-when="SC" class="fa fa-soundcloud"></i>
-            </span>
-            {{track.title}}
-            <i class="fa fa-pause"
-               ng-show="track.id == currentPlayingTrack"
-               ng-click="pause(track)">
-            </i>
-            <i class="fa fa-play"
-               ng-show="track.id != currentPlayingTrack"
-               ng-click="play(track)">
-            </i>
+        <div ng-playlist
+             tracks="searchResultsPaginator"
+             mode="source"
+             dual="userPlaylistPaginator"
+             player="searchResultsPlayer">
         </div>
     </section>
     <section id="playlist">
         <header>
             Playlist:
         </header>
+        <div ng-playlist
+             tracks="userPlaylistPaginator"
+             mode="target"
+             dual="searchResultsPaginator"
+             player="userPlaylistPlayer">
+        </div>
     </section>
 </body>
 </html>
