Some orange styles

--- a/frontend/app.html
+++ b/frontend/app.html
@@ -42,7 +42,7 @@
 </head>
 <body ng-controller="MainCtrl">
     <header>
-        <h2>Playlistach</h2>
+        <h2>Playlista<span class="orange">ch</span></h2>
     </header>
     <nav>
         <input ng-model="searchQuery"
